--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '*/15 * * * *' # 每15分钟运行一次
+      - cron: '50 1 1 1 1'
+#     - cron: '*/15 * * * *' # 每15分钟运行一次
 
 jobs:
   run_code:
