--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run_code:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       EMAIL: '782568799@qq.com' # 指定收件人邮箱地址
       PASSWORD: ${{ secrets.AUTHORIZE }} # 指定发送邮件的邮箱密码或授权码
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.10'
           
       - name: Install dependencies
         run: |
@@ -28,5 +28,19 @@ jobs:
         
       - name: Run the code
         run: |
-          nohup python code.py > /dev/null 2>&1 &
+          nohup python code1.py > /dev/null 2>&1 &
         
+
+      - name: Mail CSV File
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.qq.com
+          server_port: 587
+          username: '782568799@qq.com'
+          password: ${{ secrets.AUTHORIZE }}
+          subject: CSV File
+          body: '这是邮件正文。'
+          from: '782568799@qq.com'
+          to: '782568799@qq.com'
+          attachments: |
+            "/github/workspace/exchange_rate.csv"
