--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,21 +4,17 @@ on:
   push:
     branches: [ main ]
   schedule:
-      - cron: '50 1 1 1 1'
-#     - cron: '*/15 * * * *' # 每15分钟运行一次
+    - cron: '50 1 1 1 1'
 
 jobs:
   run_code:
     runs-on: windows-latest
-    env:
-      EMAIL: '782568799@qq.com' # 指定收件人邮箱地址
-      PASSWORD: ${{ secrets.AUTHORIZE }} # 指定发送邮件的邮箱密码或授权码
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2.4.2
         
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2.1.5
         with:
           python-version: '3.10'
           
@@ -30,18 +26,21 @@ jobs:
         run: |
           python code1.py
           
-          
-          
-      - name: Mail CSV File
-        uses: dawidd6/action-send-mail@v3
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2.2.4
         with:
-          server_address: smtp.qq.com
-          server_port: 587
-          username: '782568799@qq.com'
-          password: ${{ secrets.AUTHORIZE }}
-          subject: CSV File
-          body: '这是邮件正文。'
-          from: '782568799@qq.com'
-          to: '782568799@qq.com'
-          attachments: |
-            "D:\a\GPT-autotry\GPT-autotry\exchange_rate.csv"
+          name: my_artifact # 指定 artifact 名称
+          path: exchange_rate.csv # 指定要上传的文件路径
+          
+  download_artifact:
+    needs: run_code # 指定依赖的 job
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2.2.4
+        with:
+          name: my_artifact # 指定要下载的 artifact 名称
+      - name: Save artifact to repository directory
+        run: |
+          mkdir -p artifacts # 创建目录 artifacts
+          mv ${{ github.workspace }}/my_artifact artifacts/ # 将 artifact 移动到 artifacts 目录中
