--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   run_code:
-    runs-on: windows-latest
+    runs-on: -latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2.4.2
         
       - name: Set up Python
-        uses: actions/setup-python@v2.1.5
+        uses: actions/setup-python@v3.10
         with:
           python-version: '3.10'
           
